@@ -22,10 +22,8 @@ package org.neo4j.router.impl.query;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 import java.util.function.Supplier;
 import org.neo4j.cypher.internal.ast.CatalogName;
-import org.neo4j.cypher.internal.util.DeprecatedDatabaseNameNotification;
 import org.neo4j.dbms.api.DatabaseNotFoundException;
 import org.neo4j.dbms.api.DatabaseNotFoundHelper;
 import org.neo4j.kernel.database.DatabaseReference;
@@ -33,7 +31,6 @@ import org.neo4j.kernel.database.DatabaseReferenceRepository;
 import org.neo4j.kernel.database.NormalizedCatalogEntry;
 import org.neo4j.kernel.database.NormalizedDatabaseName;
 import org.neo4j.router.query.DatabaseReferenceResolver;
-import scala.Option;
 
 public class DefaultDatabaseReferenceResolver implements DatabaseReferenceResolver {
     private final DatabaseReferenceRepository repository;
@@ -44,19 +41,17 @@ public class DefaultDatabaseReferenceResolver implements DatabaseReferenceResolv
 
     @Override
     public QueryTarget resolve(DatabaseReference sessionDatabase, CatalogName catalogName) {
-        if (!catalogName.resolveStrictly()) {
-            return resolveNonStrictly(sessionDatabase, catalogName);
+        if (catalogName.resolveByDisplayName()) {
+            return repository
+                    .getByDisplayName(catalogName.simplifiedQualifiedNameString())
+                    .map(QueryTarget::new)
+                    .orElseThrow(databaseNotFound(catalogName));
         } else {
-            if (catalogName.names().size() > 2) {
-                throw databaseNotFound(catalogName).get();
-            } else {
-                return queryTarget(NormalizedCatalogEntry.fromList(catalogName.names()), catalogName, false)
-                        .orElseThrow(databaseNotFound(catalogName));
-            }
+            return resolveByCatalogName(sessionDatabase, catalogName);
         }
     }
 
-    private QueryTarget resolveNonStrictly(DatabaseReference sessionDatabase, CatalogName catalogName) {
+    private QueryTarget resolveByCatalogName(DatabaseReference sessionDatabase, CatalogName catalogName) {
         var containsQuotedNameParts = !catalogName.names().stream()
                 .filter(name -> name.contains("."))
                 .toList()
@@ -68,49 +63,40 @@ public class DefaultDatabaseReferenceResolver implements DatabaseReferenceResolv
                 List<NormalizedCatalogEntry> allNameCombinations = getAllNameCombinations(catalogName.names());
                 // find first matching reference and add notification
                 return allNameCombinations.stream()
-                        .flatMap(name -> queryTarget(name, catalogName, true).stream())
+                        .flatMap(name -> queryTarget(name).stream())
                         .findFirst()
                         .orElseThrow(databaseNotFound(catalogName));
             }
         } else if (catalogName.names().size() == 2) {
-            if (catalogName.names().get(0).contains("."))
+            if (catalogName.names().getFirst().contains("."))
                 throw databaseNotFound(catalogName).get();
             var constituentEntry = NormalizedCatalogEntry.fromList(catalogName.names());
             var aliasEntry = new NormalizedCatalogEntry(namePartsToName(catalogName.names()));
             if (containsQuotedNameParts) {
                 // consider only user given choice
-                return queryTarget(constituentEntry, catalogName, false).orElseThrow(databaseNotFound(catalogName));
+                return queryTarget(constituentEntry).orElseThrow(databaseNotFound(catalogName));
             } else {
                 if (sessionDatabase.isComposite()) {
                     // prefer constituent over alias
-                    return queryTarget(constituentEntry, catalogName, true)
-                            .or(() -> queryTarget(aliasEntry, catalogName, true))
+                    return queryTarget(constituentEntry)
+                            .or(() -> queryTarget(aliasEntry))
                             .orElseThrow(databaseNotFound(catalogName));
                 } else {
                     // prefer alias over constituent
-                    return queryTarget(aliasEntry, catalogName, true)
-                            .or(() -> queryTarget(constituentEntry, catalogName, true))
+                    return queryTarget(aliasEntry)
+                            .or(() -> queryTarget(constituentEntry))
                             .orElseThrow(databaseNotFound(catalogName));
                 }
             }
         } else {
-            return queryTarget(NormalizedCatalogEntry.fromList(catalogName.names()), catalogName, false)
+            return queryTarget(NormalizedCatalogEntry.fromList(catalogName.names()))
                     .orElseThrow(databaseNotFound(catalogName));
         }
     }
 
-    private Optional<QueryTarget> queryTarget(
-            NormalizedCatalogEntry catalogEntry, CatalogName catalogName, boolean addNotification) {
+    private Optional<QueryTarget> queryTarget(NormalizedCatalogEntry catalogEntry) {
         var databaseReference = repository.getByAlias(catalogEntry);
-        return databaseReference.map(reference -> {
-            if (addNotification) {
-                var notification =
-                        new DeprecatedDatabaseNameNotification(catalogName.qualifiedNameString(), Option.empty());
-                return new QueryTarget(reference, Set.of(notification));
-            } else {
-                return new QueryTarget(reference);
-            }
-        });
+        return databaseReference.map(QueryTarget::new);
     }
 
     static List<NormalizedCatalogEntry> getAllNameCombinations(List<String> nameParts) {
